Fix SharedDrive connector global filters